--- a/RosoutDebugUC/RDUC.xaml
+++ b/RosoutDebugUC/RDUC.xaml
@@ -5,7 +5,17 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="250" d:DesignWidth="480" Loaded="UserControl_Loaded">
- <!--   <Grid Name="GridMain" >
+    
+        <DataGrid AutoGenerateColumns="False"  Height="auto" Name="dataGrid1" Width="auto">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Time Stamp" Binding="{Binding timestamp}"/>
+                <DataGridTextColumn Header="Level" Binding="{Binding level}"/>
+                <DataGridTextColumn Header="Message" Binding="{Binding msgdata}"/>
+                <DataGridTextColumn Header="Name" Binding="{Binding msgname}"/>
+            </DataGrid.Columns>
+        </DataGrid>
+    
+    <!--   <Grid Name="GridMain" >
         <Grid.RowDefinitions>
             <RowDefinition Height="30" />
             <RowDefinition Height="Auto" />
@@ -32,9 +42,7 @@
             <TextBlock Grid.Column="2" Margin="2" Name="textcolm2" />
             <TextBlock Grid.Column="3" Margin="2" Name="textcolm3" />
             
-        </Grid>
-            
-        </Grid>-->
+       
     <ScrollViewer Name="scroller" HorizontalScrollBarVisibility="Visible" Width="480">
         <Grid>
             <Grid.RowDefinitions>
@@ -52,7 +60,7 @@
             <TextBlock Text="Level" Grid.Column="1" Grid.Row="0" Margin="2" HorizontalAlignment="Center"/>
             <TextBlock Text="Message" Grid.Column="2" Grid.Row="0" Margin="2" HorizontalAlignment="Center" />
             <TextBlock Text="Name" Grid.Column="3" Grid.Row="0" Margin="2" HorizontalAlignment="Center" />
-       <!--  -->
+       
             
             <TextBlock Grid.Column="0" Grid.Row="1" Margin="0" Name="textcolm0" HorizontalAlignment="Left"/>
             <TextBlock Grid.Column="1" Grid.Row="1" Margin="0" Name="textcolm1" />
@@ -60,5 +68,6 @@
             <TextBlock Grid.Column="3" Grid.Row="1" Margin="0" Name="textcolm3" HorizontalAlignment="Left"/>
 
     </Grid>
-    </ScrollViewer>
+    </ScrollViewer>-->
+    
 </UserControl>
