--- a/CompressedImageView/MainWindow.xaml
+++ b/CompressedImageView/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:c="clr-namespace:ROS_ImageWPF;assembly=ROS_ImageUtils"
         xmlns:ArmGaugeUC="clr-namespace:ArmGaugeUC;assembly=ArmGaugeUC"
         xmlns:RosoutDebugUC="clr-namespace:RosoutDebugUC;assembly=RosoutDebugUC"
+        xmlns:BattVoltUC="clr-namespace:BattVoltUC;assembly=VoltageUC"
         AllowsTransparency="True" Background="Silver" Height="1080" Icon="Icon.png" Left="0" Loaded="Window_Loaded" Name="Window1" Title="MainWindow" Top="0" Width="1920" WindowState="Normal" WindowStyle="None">
     <Grid>
         <!-- BEGIN status blocks -->
@@ -14,10 +15,10 @@
 
 
         <!-- BEGIN main camera windows -->
-        <TabControl Background="Turquoise" Height="518" HorizontalAlignment="Center" Margin="0,70,0,0" Name="MainCameraTabControl" VerticalAlignment="Top" Width="874" SelectionChanged="MainCameraTabControl_SelectionChanged">
-            <TabItem Background="Gold" Header="Main Camera 1" Name="MainCamera1" Mouse.MouseDown="T">
+        <TabControl Background="Gold" Height="518" HorizontalAlignment="Center" Margin="0,70,0,0" Name="MainCameraTabControl" VerticalAlignment="Top" Width="874" SelectionChanged="MainCameraTabControl_SelectionChanged">
+            <TabItem Background="Gold" Header="Main Camera 1" Name="MainCamera1" Mouse.MouseDown="MainCamera1_MouseDown">
                 <!--Currently displaying 4:3 aspect ratio. Make Width 864 for 16:9 Widescreen-->
-                <c:CompressedImageControl c:CompressedImageControl.TopicName="/jpeg_compressed_ui/compressed" Height="486" x:FieldModifier="public" x:Name="TestImage0" Width="648">
+                <c:CompressedImageControl c:CompressedImageControl.TopicName="/image_raw" Height="486" x:FieldModifier="public" x:Name="TestImage0" Width="648">
                     <c:CompressedImageControl.LayoutTransform>
                         <RotateTransform Angle="180"/>
                     </c:CompressedImageControl.LayoutTransform>
@@ -54,39 +55,40 @@
         
         
         <!-- BEGIN controller image display -->
-        <Image Height="240" HorizontalAlignment="Left" Margin="0,0,0,0" Name="PSControllerImage" Source="PSController.png" VerticalAlignment="Bottom" />
+        <Image Height="240" HorizontalAlignment="Left" Margin="83,0,0,50" Name="PSControllerImage" Source="PSController.png" VerticalAlignment="Bottom" />
 
-        <ProgressBar Height="100" HorizontalAlignment="Left" Margin="111,0,0,203" Maximum="1" Minimum="0" Name="LeftTriggerProgressBar" Orientation="Vertical" Width="50" VerticalAlignment="Bottom"/>
-        <TextBlock HorizontalAlignment="Left" Margin="111,0,0,203" Name="LeftTriggerValueTextBlock" Text="0%" TextAlignment="Center" Width="50" VerticalAlignment="Bottom"/>
+        <ProgressBar Height="100" HorizontalAlignment="Left" Margin="194,0,0,253" Maximum="1" Minimum="0" Name="LeftTriggerProgressBar" Orientation="Vertical" Width="50" VerticalAlignment="Bottom"/>
+        <TextBlock HorizontalAlignment="Left" Margin="194,0,0,253" Name="LeftTriggerValueTextBlock" Text="0%" TextAlignment="Center" Width="50" VerticalAlignment="Bottom"/>
         
-        <ProgressBar Height="100" HorizontalAlignment="Left" Margin="223,0,0,203" Maximum="1" Minimum="0" Name="RightTriggerProgressBar" Width="50" Orientation="Vertical" VerticalAlignment="Bottom"/>
+        <ProgressBar Height="100" HorizontalAlignment="Left" Margin="306,0,0,253" Maximum="1" Minimum="0" Name="RightTriggerProgressBar" Width="50" Orientation="Vertical" VerticalAlignment="Bottom"/>
         
-        <TextBlock HorizontalAlignment="Left" Margin="223,0,0,203" Name="RightTriggerValueTextBlock" Text="0%" TextAlignment="Center" VerticalAlignment="Bottom" Width="50" />
+        <TextBlock HorizontalAlignment="Left" Margin="306,0,0,253" Name="RightTriggerValueTextBlock" Text="0%" TextAlignment="Center" VerticalAlignment="Bottom" Width="50" />
   
-        <Ellipse Fill="White" Height="15" HorizontalAlignment="Left" Margin="148,0,0,137" Name="Back" Stroke="DarkGray" Width="20" VerticalAlignment="Bottom"/>
-        <Ellipse Fill="White" Height="15" HorizontalAlignment="Left" Margin="214,0,0,137" Name="Start" Stroke="DarkGray" Width="20" VerticalAlignment="Bottom"/>
+        <Ellipse Fill="White" Height="15" HorizontalAlignment="Left" Margin="231,0,0,187" Name="Back" Stroke="DarkGray" Width="20" VerticalAlignment="Bottom"/>
+        <Ellipse Fill="White" Height="15" HorizontalAlignment="Left" Margin="297,0,0,187" Name="Start" Stroke="DarkGray" Width="20" VerticalAlignment="Bottom"/>
 
-        <Ellipse Fill="Gray" Height="50" HorizontalAlignment="Left" Margin="112,0,0,67" Name="LeftStick"  Width="50" VerticalAlignment="Bottom"/>
-        <Ellipse Fill="LightGray" Height="10" HorizontalAlignment="Left" Margin="131,0,0,87" Name="LeftStickValue" Width="10" VerticalAlignment="Bottom"/>
+        <Ellipse Fill="Gray" Height="50" HorizontalAlignment="Left" Margin="195,0,0,117" Name="LeftStick"  Width="50" VerticalAlignment="Bottom"/>
+        <Ellipse Fill="LightGray" Height="10" HorizontalAlignment="Left" Margin="214,0,0,137" Name="LeftStickValue" Width="10" VerticalAlignment="Bottom"/>
         <!--Y, X, B, A-->
-        <Ellipse Fill="Gold" Height="30" HorizontalAlignment="Left" Margin="292,0,0,164" Name="Y" Stroke="Gold" Width="30" VerticalAlignment="Bottom"/>
-        <Ellipse Fill="Blue" Height="30" HorizontalAlignment="Left" Margin="264,0,0,136" Name="X" Stroke="Blue" Width="30" VerticalAlignment="Bottom"/>
-        <Ellipse Fill="Red" Height="30" HorizontalAlignment="Left" Margin="320,0,0,136" Name="B" Stroke="Red" Width="30" VerticalAlignment="Bottom"/>
-        <Ellipse Fill="Green" Height="30" HorizontalAlignment="Left" Margin="292,0,0,108" Name="A" Stroke="Green" Width="30" VerticalAlignment="Bottom"/>
+        <Ellipse Fill="Gold" Height="30" HorizontalAlignment="Left" Margin="375,0,0,214" Name="Y" Stroke="Gold" Width="30" VerticalAlignment="Bottom"/>
+        <Ellipse Fill="Blue" Height="30" HorizontalAlignment="Left" Margin="347,0,0,186" Name="X" Stroke="Blue" Width="30" VerticalAlignment="Bottom"/>
+        <Ellipse Fill="Red" Height="30" HorizontalAlignment="Left" Margin="403,0,0,186" Name="B" Stroke="Red" Width="30" VerticalAlignment="Bottom"/>
+        <Ellipse Fill="Green" Height="30" HorizontalAlignment="Left" Margin="375,0,0,158" Name="A" Stroke="Green" Width="30" VerticalAlignment="Bottom"/>
         <!--Right Stick-->
-        <Ellipse Fill="Gray" Height="50" Margin="223,0,0,67" Name="RightStick"  Width="50" HorizontalAlignment="Left" VerticalAlignment="Bottom"/>
-        <Ellipse Height="10" Margin="243,0,0,87" Name="RightStickValue" Width="10" Fill="LightGray" HorizontalAlignment="Left" VerticalAlignment="Bottom"/>
+        <Ellipse Fill="Gray" Height="50" Margin="306,0,0,117" Name="RightStick"  Width="50" HorizontalAlignment="Left" VerticalAlignment="Bottom"/>
+        <Ellipse Height="10" Margin="326,0,0,137" Name="RightStickValue" Width="10" Fill="LightGray" HorizontalAlignment="Left" VerticalAlignment="Bottom"/>
         <!--DPad-->
-        <Rectangle Fill="DarkGray" Height="20" Margin="68,0,0,163" Name="DPadUp"  Width="20" HorizontalAlignment="Left" Stroke="DarkGray" VerticalAlignment="Bottom"/>
-        <Rectangle Fill="DarkGray" Height="20" Margin="68,0,0,121" Name="DPadDown"  Width="20" HorizontalAlignment="Left" Stroke="DarkGray" VerticalAlignment="Bottom"/>
-        <Rectangle Fill="DarkGray" Height="20" Margin="48,0,0,142" Name="DPadLeft"  Width="20" HorizontalAlignment="Left" Stroke="DarkGray" VerticalAlignment="Bottom"/>
-        <Rectangle Fill="DarkGray" Height="20" Margin="89,0,0,142" Name="DPadRight"  Width="20" HorizontalAlignment="Left" Stroke="DarkGray" VerticalAlignment="Bottom"/>
+        <Rectangle Fill="DarkGray" Height="20" Margin="151,0,0,213" Name="DPadUp"  Width="20" HorizontalAlignment="Left" Stroke="DarkGray" VerticalAlignment="Bottom"/>
+        <Rectangle Fill="DarkGray" Height="20" Margin="151,0,0,171" Name="DPadDown"  Width="20" HorizontalAlignment="Left" Stroke="DarkGray" VerticalAlignment="Bottom"/>
+        <Rectangle Fill="DarkGray" Height="20" Margin="131,0,0,192" Name="DPadLeft"  Width="20" HorizontalAlignment="Left" Stroke="DarkGray" VerticalAlignment="Bottom"/>
+        <Rectangle Fill="DarkGray" Height="20" Margin="172,0,0,192" Name="DPadRight"  Width="20" HorizontalAlignment="Left" Stroke="DarkGray" VerticalAlignment="Bottom"/>
         <!-- END controller image display -->
         
         
         <!-- BEGIN user control interfaces -->
-        <ArmGaugeUC:ArmGauge Name="armGauge" Visibility="Visible" Width="160" Height="510" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,20,20,0" />
+        <ArmGaugeUC:ArmGauge Name="armGauge" Visibility="Visible" Width="160" Height="510" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,70,50,0" />
         <RosoutDebugUC:RosoutDebug Visibility="Visible" Width="500"  Height="300" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,30,30" />
+        <BattVoltUC:BattVolt Name="battvolt" Visibility="Visible" Width="200" Height="125" Margin="1442,455,0,461" HorizontalAlignment="Left" />
         <!-- END user control interfaces -->
         
         
@@ -150,10 +152,10 @@
         <TextBlock Height="20" HorizontalAlignment="Center" Margin="50,0,0,50" Name="GreenTextBlock" Text="Green" VerticalAlignment="Bottom" />
         <TextBlock Height="20" HorizontalAlignment="Center" Margin="150,0,0,50" Name="BlueTextBlock" Text="Blue" VerticalAlignment="Bottom" />
         <TextBlock Height="20" HorizontalAlignment="Center" Margin="250,0,0,50" Name="PurpleTextBlock" Text="Purple" VerticalAlignment="Bottom" />
-        <Rectangle Height="20" HorizontalAlignment="Left" Margin="48,0,0,228" Name="LShPress" Stroke="DarkGray" VerticalAlignment="Bottom" Width="60" />
-        <Rectangle Height="20" HorizontalAlignment="Left" Margin="48,0,0,247" Name="LTrigPress" Stroke="DarkGray" VerticalAlignment="Bottom" Width="60" />
-        <Rectangle Height="20" HorizontalAlignment="Left" Margin="275,0,0,228" Name="RShPress" Stroke="DarkGray" VerticalAlignment="Bottom" Width="60" />
-        <Rectangle Height="20" HorizontalAlignment="Left" Margin="275,0,0,247" Name="RTrigPress" Stroke="DarkGray" VerticalAlignment="Bottom" Width="60" />
+        <Rectangle Height="20" HorizontalAlignment="Left" Margin="131,0,0,278" Name="LShPress" Stroke="DarkGray" VerticalAlignment="Bottom" Width="60" />
+        <Rectangle Height="20" HorizontalAlignment="Left" Margin="131,0,0,297" Name="LTrigPress" Stroke="DarkGray" VerticalAlignment="Bottom" Width="60" />
+        <Rectangle Height="20" HorizontalAlignment="Left" Margin="358,0,0,278" Name="RShPress" Stroke="DarkGray" VerticalAlignment="Bottom" Width="60" />
+        <Rectangle Height="20" HorizontalAlignment="Left" Margin="358,0,0,297" Name="RTrigPress" Stroke="DarkGray" VerticalAlignment="Bottom" Width="60" />
         <!-- END rock counter -->
         
         
