--- a/ROS_IMUUtils/Gimbal.xaml
+++ b/ROS_IMUUtils/Gimbal.xaml
@@ -1,8 +1,17 @@
 ﻿<UserControl x:Class="ROS_IMUUtil.Gimbal"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                      Loaded="UserControl_Loaded" SnapsToDevicePixels="True" SizeChanged="UserControl_SizeChanged" MinWidth="200" MinHeight="200">
-  <Grid SnapsToDevicePixels="True">
+                      Loaded="UserControl_Loaded" SnapsToDevicePixels="True" SizeChanged="UserControl_SizeChanged" Width="200" Height="200" mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006">
     
-  </Grid>
+        <Canvas Width="200" Height="200" ClipToBounds="True">
+        <Image Height="800" HorizontalAlignment="Left" Name="AngleMeter" Stretch="Fill" VerticalAlignment="Top" Width="203" Source="/ROS_IMUUtils;component/Images/Horizon_GroundSky.bmp" Margin="0,-300,0,0" >
+            <Image.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform x:Name="rot" />
+                    <TranslateTransform x:Name="trans" />
+                </TransformGroup>
+            </Image.RenderTransform>
+        </Image>
+        <Image Height="200" HorizontalAlignment="Left" Name="image2" Stretch="Fill" VerticalAlignment="Top" Width="200" Source="/ROS_IMUUtils;component/Images/Horizon_Background.png" Margin="0,-300,0,0" Canvas.Left="0" Canvas.Top="300" />
+            </Canvas>
 </UserControl>
